logging config file parsing functional

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -31,9 +31,9 @@ keys=default
 level=INFO
 formatter=standard
 class=logging.handlers.RotatingFileHandler
-filename=${log_dir}/${log_fn}
+filename=${paths:log_dir}/${paths:log_fn}
 mode=a
-maxbytes=10485760
+maxBytes=10485760
 backupCount=5
 
 
