--- a/config/logging.conf
+++ b/config/logging.conf
@@ -18,11 +18,11 @@ disable_existing_loggers=False
 keys=standard
 
 [formatters.standard]
-format=%(asctime)s [%(levelname)8s] %(name)s: %(message)s
+format=%(asctime)s [%(levelname)-8s] %(name)s: %(message)s
 
 
 [handlers]
-keys=default
+keys=default, console
 
 # The default logging handler doesn't include DEBUG level
 # messages and prints to a log file instead of the console.
@@ -35,6 +35,11 @@ filename=${paths:log_dir}/${paths:log_fn}
 mode=a
 maxBytes=10485760
 backupCount=5
+
+[handlers.console]
+level=INFO
+formatter=standard
+class=logging.StreamHandler
 
 
 # The root logger can be configured here or in 'loggers' below,
