More moving of bot config, cleaning up docstrings

--- a/.config/bot.conf
+++ b/.config/bot.conf
@@ -1,3 +1,12 @@
 [clients]
+keys=discord, slack
 slack=False
 discord=True
+
+[clients.discord]
+connect=True
+token=
+
+[clients.slack]
+connect=False
+token=
